tests/NormalTests/paczka1/small_fuzzy/65300041.err
Error in line 2: wcDM1oA9Sxr A388 51,5
Error in line 14: gI9QkS6zV A388 67,7
